[project]
name = "ricecake"
version = "v0.1.0"
authors = [{ name = "WieeRd", email = "verywieerd@gmail.com" }]
requires-python = ">=3.8"
dependencies = []


[tool.ruff]
output-format = "grouped"

[tool.ruff.lint]
extend-select = [
    "C90", # mccabe
    "N", # pep8-naming
    "UP", # pyupgrade
    "ANN001", "ANN2", # annotations
    "ASYNC", # async
    "BLE", # blind-except
    "FBT", # boolean-trap
    "B", # bugbear
    "A", # builtin
    "COM818", "COM819", # commas
    "C4", # comprehensions
    "ISC", # implicit-str-concat
    "G", # logging-format
    "INP", # no-pep420
    "PIE", # pie
    "RET", # return
    "SIM", # simplify
    "TCH", # type-checking
    "PGH003", "PGH004", # pygrep-hooks
    "RUF", # ruff
]

# F403: checks for wildcard imports (`from module import *`)
# excuse: import * will always be used modules containing `__all__`
per-file-ignores = { "__init__.py" = ["F403"] }

[tool.ruff.format]
preview = true


[tool.pyright]
pythonVersion = "3.8"
include = ["ricecake"]
strict = ["ricecake"]
