[project]
name = "ricecake"
version = "0.1.0"
description = "Fuzzy / incremental search for Korean texts."
authors = [{ name = "WieeRd", email = "verywieerd@gmail.com" }]
requires-python = ">=3.8"
dependencies = []
readme = "README.md"
license = { text = "MIT" }


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[tool.ruff]
output-format = "grouped"

[tool.ruff.lint]
extend-select = [
    "C90", # mccabe
    "N", # pep8-naming
    "D", # pydocstyle
    "UP", # pyupgrade
    "ANN001", "ANN2", # annotations
    "ASYNC", # async
    "BLE", # blind-except
    "FBT", # boolean-trap
    "B", # bugbear
    "A", # builtin
    "COM818", "COM819", # commas
    "C4", # comprehensions
    "ISC", # implicit-str-concat
    "G", # logging-format
    "INP", # no-pep420
    "PIE", # pie
    "RET", # return
    "SIM", # simplify
    "TCH", # type-checking
    "PGH003", "PGH004", # pygrep-hooks
    "RUF", # ruff
]

# F403: checks for wildcard imports (`from module import *`)
# excuse: import * will always be used modules containing `__all__`
per-file-ignores = { "__init__.py" = ["F403"] }

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
preview = true


[tool.pyright]
pythonVersion = "3.8"
include = ["ricecake"]
strict = ["ricecake"]
