[project]
name = "ricecake"
version = "0.1.0"
description = "Fuzzy / incremental search for Korean texts."
authors = [{ name = "WieeRd", email = "verywieerd@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
lint = ["ruff>=0.2.1"]


[tool.ruff]
output-format = "grouped"

[tool.ruff.lint]
extend-select = [
    "C90", # mccabe
    "N", # pep8-naming
    "UP", # pyupgrade
    "ANN001", "ANN2", # annotations
    "ASYNC", # async
    "BLE", # blind-except
    "FBT", # boolean-trap
    "B", # bugbear
    "A", # builtin
    "COM818", "COM819", # commas
    "C4", # comprehensions
    "ISC", # implicit-str-concat
    "G", # logging-format
    "INP", # no-pep420
    "PIE", # pie
    "RET", # return
    "SIM", # simplify
    "TCH", # type-checking
    "PGH003", "PGH004", # pygrep-hooks
    "RUF", # ruff
]

# allow wildcard imports in `__init__.py`
per-file-ignores = { "__init__.py" = ["F403"] }

[tool.ruff.format]
preview = true


[tool.pyright]
pythonVersion = "3.10"
include = ["ricecake"]
strict = ["ricecake"]
